# snark-tool

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  procedures.md  snark-tool.yml
examples/: colour.rs  graph.rs  io.rs
resources/graphs/: 12snarksForTest.g6  12snarksForTest.s6  3TF1-03.g6  5flow28.28  DSXDS.ALL  Generated_10000_36vert_snarks_04.g6  Generated_100_36vert_snarks.g6  Generated_2100_36vert_snarks.g6  Generated_graphs.30.05.sn.cyc4.g6  ODD4-ALL.g6  PSC6XJ5.118  append_ba.ALL  gg.26.05-critical-10.g6  gg.26.05-scocritical-2.g6  graphG6.g6  new_file.ALL  non_snarks.g6  petersen.10  petersen.g6
resources/test/: Generated_graphs.30.05.sn.cyc4.100.g6  Generated_graphs.30.05.sn.cyc5.100.g6
src/: lib.rs  main.rs
src/error/: mod.rs
src/graph/: edge.rs  graph.rs  mod.rs  pet_graph_utils.rs  simple_graph.rs  simple_pet_graph.rs  vertex.rs
src/graph/multi/: graph.rs
src/graph/temp/: graph.rs  simple_pet_graph.rs
src/graph/temp_graph/: mod.rs
src/graph/traits/: edge.rs  graph.rs  vertex.rs
src/graph/undirected/: edge.rs  mod.rs  simple_graph.rs  vertex.rs
src/graph/undirected_sparse/: graph.rs  vertex.rs
src/graph/undirected_sparse_2/: graph.rs  vertex.rs
src/procedure/: config_helper.rs  configuration.rs  graph.rs  mod.rs  procedure.rs  procedure_builder.rs  procedure_chain.rs  procedure_registry.rs  tests.rs
src/procedure/basic_impl/: basic_config.rs  basic_procedure.rs  basic_properties.rs  mod.rs  properties.rs
src/procedure/basic_procedures/: chromatic_properties.rs  colour.rs  constructions.rs  counter.rs  critical_and_stable_properties.rs  filter.rs  mod.rs  read.rs  unknown_procedure.rs  write.rs  (+1 more)
src/service/: mod.rs
src/test/: colour_test.rs  graph_test.rs  graph_traversal_tests.rs  io_test.rs  measurement_test.rs  mod.rs  procedure_test.rs  properties_test.rs  reader_test.rs  splr_test.rs  temp_test.rs  test_data.rs
src/tests/: colour_test.rs  graph_traversal_tests.rs  io_test.rs  measurement_test.rs  mod.rs  procedure_test.rs  temp_test.rs  test_data.rs
(+157 files in other folders)
