[package]
name = "snark-tool"
version = "0.1.0"
authors = ["jstrmen <kubbost@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.10"
yaml-rust = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
petgraph = "0.5.0"

#byteorder = "1.3.4"
bit-set = "0.5.1"
bit-vec = "0.6.1"
