[package]
name = "snark-tool"
version = "0.1.0"
authors = ["jstrmen <kubbost@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.test]
opt-level = 3

[dependencies]
structopt = "0.2.10"
yaml-rust = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
bit-vec = "0.6.1"

varisat = "0.2.1"
rand = "0.7.3"

num_cpus = "1.13.0"
